--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,8 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.planetarium.StarrySky"
-            android:label="@string/title_activity_starry_sky" >
+            android:name="com.example.planetarium.Galaxy">
         </activity>
     </application>
 
